--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,9 +1,17 @@
-@import "base/variables";
-@import "base/animations";
-@import "base/mixins";
-@import "base/normalize";
-@import 'base/reset';
-@import "base/typography";
-@import "base/utilities";
+//colors
+$dark-navy: #0a192f;
+$navy: #112240;
+$light-navy: #172a45;
+$lightest-navy: #233554;
+$slate: #8892b0;
+$light-slate: #a8b2d1;
+$lightest-slate: #ccd6f6;
+$green: #64ffda;
+$green-tint: rgba(100, 255, 218, 0.1);
 
-@import "components/titles";
+* {
+    margin:0;
+    padding:0;
+    font-weight: 400;
+    font-size: 16px;
+}
