feat: update navbar styles and functionality, replace scroll effect with inset shadow, and refine social links

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,4 +1,5 @@
 //colors
+$main: #0a192f;
 $dark-navy: #0a192f;
 $navy: #112240;
 $light-navy: #172a45;
@@ -6,7 +7,6 @@ $lightest-navy: #233554;
 $slate: #8892b0;
 $light-slate: #a8b2d1;
 $lightest-slate: #ccd6f6;
-$green: #64ffda;
 $green-tint: rgba(100, 255, 218, 0.1);
 
 * {
@@ -14,4 +14,5 @@ $green-tint: rgba(100, 255, 218, 0.1);
     padding:0;
     font-weight: 400;
     font-size: 16px;
+    font-family: "Roboto Mono", monospace;
 }
