--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,5 +1,6 @@
+@import './quasar.variables.scss';
+
 //colors
-$main: #0a192f;
 $dark-navy: #0a192f;
 $navy: #112240;
 $light-navy: #172a45;
@@ -16,3 +17,7 @@ $green-tint: rgba(100, 255, 218, 0.1);
     font-size: 16px;
     font-family: "Roboto Mono", monospace;
 }
+
+.q-list {
+    background-color: $primary;
+} 
